# yarf

./: .gitignore  .lfsconfig  .pre-commit-config.yaml  .python-version  AGENTS.md  CONTRIBUTING.md  GitVersion.yaml  README.md  SECURITY.md  hatch_build.py  pull_request_template.md  pydoclint-baseline.txt  pyproject.toml  renovate.json  semver.sh  tox.ini  yarf_317.assert
.github/: .jira_sync_config.yaml  copilot-instructions.md  dependabot.yml  renovate.json
.github/actions/setup-yarf-noble/: action.yaml
.github/scripts/canary-test/: install-arch-dependencies.sh  install-platform-dependencies.sh  pin-yarf-version.sh  prepare-platform.sh
.github/scripts/sbom/: sbom.py
.github/scripts/snap/: add-commit-sha.sh
.github/scripts/snap-evaluate-version/: normalize-version.sh
.github/scripts/yarf/: _retry.sh  check_unused_keywords.py  install-base-deps.sh  install-mir-deps.sh  keywords_listener.py  merge-keywords-coverage.py  run-integration-tests.sh  run-keyword-suite.sh  run-tutorial-tests.sh  run-unit-tests.sh  start-mir-server.sh
.github/scripts/yarf-release/: build_release_notes_body.sh  collect_commits.sh  resolve_git_tags.sh
.github/workflows/: automatic-doc-checks.yml  canary-test.yaml  canary_test.yaml  platform-plugin-test.yaml  pr-validation.yaml  pre-commit.yaml  sbom.yaml  snap-dry-run.yaml  snap-evaluate-version.yaml  snap-platform-plugin-test.yaml  snap-promotion.yaml  snap.yaml  snap_promotion.yaml  stale.yaml  test-canary.yaml  test-semantic-version.yaml  test-snap-build.yaml  test-snap-build.yml  test_canary.yaml  tics.yaml  validate_workflows.yaml  vulnerability-scanning.yaml  yarf-release.yaml  yarf-retry.yaml  yarf.yaml
.github/workflows/scripts/: collect_commits.sh
docs/: .custom_wordlist.txt  .gitignore  .readthedocs-requirements.txt  .readthedocs.yaml  .wordlist.txt  CONTRIBUTING.md  Makefile  Makefile.sp  conf.py  custom_conf.py  doc-cheat-sheet-myst.md  index.rst
docs/.sphinx/: build_requirements.py  pa11y.json  requirements.txt
docs/.sphinx/_static/: overwrite_links.js
docs/.sphinx/rf_libraries/: convert_libdoc_to_md.py  generate_library_libdoc.py
docs/.sphinx/robot/: convert_libdoc_to_md.py  generate_library_libdoc.py
docs/explanation/: index.md  key-concepts.md
docs/how-to/: index.md  interactive-console.md  organising-a-test-plan-for-a-specific-output-format.md  organizing-a-test-plan-for-a-specific-output-format.md  platform-plugins.md  run-a-robot-test-suite-in-yarf.md  using-the-llm-client.md  using-the-vnc-backend.md  write-a-robot-file-with-yarf-tags.md
docs/reference/: exit-codes.md  index.md  rf_libraries-libraries.md  rf_libraries-resources.md  robot-libraries.md  robot-resources.md  yarf-metadata-and-tags.md  yarf-tags.md
docs/reference/rf_libraries/interactive_console/: Interactive.json  index.md  library-Interactive.md
docs/reference/rf_libraries/libraries/: hid_base.json  index.md  library-hid_base.md  library-video_input_base.md  video_input_base.json
docs/reference/rf_libraries/resources/: kvm.json  resource-kvm.md
docs/tutorial/: getting_started.md  index.md  writting-a-test-suite.md
examples/yarf-example-plugin/: .gitignore  README.md  pyproject.toml
examples/yarf-example-plugin/snap/: snapcraft.yaml
examples/yarf-example-plugin/snap/hooks/: configure  (+2 more)
examples/yarf-example-simple-counter/: README.md  pyproject.toml
examples/yarf-example-simple-counter/simple_counter/: main.py
examples/yarf-example-simple-counter/yarf_tests/: button_tests.robot
scripts/: semver.sh
snap/: snapcraft.yaml
snap/hooks/: configure
tests/basic_suite/: __init__.robot  calculator.robot
tests/canary_test/: __init__.robot  calculator.robot
tests/canary_test/mir/: __init__.robot  calculator.robot
tests/canary_test/vnc/: __init__.robot  try_ubuntu.robot
tests/canary_test/vnc-sway/: calculator.robot
tests/keyword_suite/: __init__.robot  cursor_detector_test.robot  grid_test.robot  hid_keyboard_test.robot  hid_point_test.robot  hid_pointer_test.robot  kvm_test.robot  llm_client_test.robot  video_cursor_test.robot  video_image_test.robot  video_text_test.robot  video_video_test.robot  wayland_trace.resource
tests/keyword_suite/grid/: .gitignore  README.md  pyproject.toml
tests/keyword_suite/grid/grid_app/: __init__.py  main.py
tests/keyword_suite/server/: llm_stub_server.py
tests/keyword_tests/: __init__.robot
tests/plugin_suite/: __init__.robot  plugin.robot
tests/yarf-example-plugin/: pyproject.toml
tests/yarf-example-plugin/plugin_suite/: plugin.robot
tests/yarf-example-plugin/snap/: snapcraft.yaml
tests/yarf-example-plugin/snap/hooks/: configure
tests/yarf-example-plugin/src/yarf_plugin_example/: Hid.py  VideoInput.py  __init__.py
yarf/: __init__.py  main.py  output_converter.py
yarf/errors/: __init__.py  yarf_errors.py
yarf/lib/: __init__.py
yarf/lib/images/: Images_patch.py  __init__.py  utils.py
yarf/lib/wayland/: __init__.py  screencopy.py  virtual_keyboard.py  virtual_pointer.py  wayland_client.py
yarf/loggers/: __init__.py  owasp_logger.py
yarf/loggers/tests/: test_owasp_logger.py
yarf/logging/tests/: test_owasp_logger.py
yarf/loggings/tests/: test_owasp_logger.py
yarf/output/: __init__.py  hexr_output_converter.py  test_submission_schema.py
yarf/output/tests/: test_hexr_output_converter.py  test_init.py  test_test_submission_schema.py
yarf/rf_libraries/: __init__.py  suite_parser.py
yarf/rf_libraries/interactive_console/: Interactive.py  __init__.py  start_console.robot
yarf/rf_libraries/libraries/: __init__.py  hid_base.py  metadata_listener.py  video_input_base.py
yarf/rf_libraries/resources/: kvm.resource
yarf/rf_libraries/tests/: test_robot_init.py  test_suite_parser.py
yarf/rf_libraries/variables/: video_input_vars.py
yarf/robot/: __init__.py  suite_parser.py
yarf/robot/libraries/: __init__.py  hid_base.py  smoke_base.py  video_input_base.py
yarf/robot/resources/: kvm.resource  smoke.resource
yarf/robot/tests/: test_robot_init.py  test_suite_parser.py
yarf/tests/: fixtures.py  test_main.py  test_output_converter.py
(+100 files in other folders)
