[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yarf"
license = "GPL-3.0"
authors = [
    {name = "Hou Nam Chiang", email = "douglas.chiang@canonical.com"},
    {name = "Michał Sawicz", email = "michal.sawicz@canonical.com"},
    {name = "Paolo Gentili", email = "paolo.gentili@canonical.com"},
    {name = "Tim Andersson", email = "tim.andersson@canonical.com"}
]
description = """
Yet Another Robot Framework (YARF) is an interface that
allows developers to build complex test scenarios and
bootstrap them locally, then work towards automated runs.
"""

# The version should be set during CI.
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10.12,<3.15,!=3.11.0,!=3.11.1,!=3.11.2,!=3.11.3"
dependencies = [
    "keysymdef~=1.2.0",
    # Target 3.10 specifically with the last compatible version
    "onnxruntime~=1.23.2; python_version < '3.11'",
    # Target 3.11 through 3.14 with the newer version
    "onnxruntime~=1.24.1; python_version >= '3.11'",
    "opencv-python~=4.13.0.90",
    "owasp-logger~=0.1.3",
    "Pillow~=12.1.0",
    "pytesseract~=0.3.10",
    "pywayland",
    "rapidfuzz>=3.12.1",
    "rapidocr~=3.6.0",
    "robotframework~=7.4.0",
    "robotframework-sshlibrary~=3.8.0",
    "robotframework-stacktrace==0.4.1",
    "prompt-toolkit>=3.0.38",
    "pygments>=2.14.0",
    "pyperclip>=1.8.2",
    "numpy~=2.2.6",  # latest to support 3.10
    "xkbcommon<1.5",  # ubuntu jammy supports up to 1.4.0
    "pyte~=0.8.2",
    "pyserial>=3.5",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions~=4.15.0",  # implicitly required by owasp-logger
]

[dependency-groups]
dev = [
    "licensecheck",
    "mypy",
    "prek",
    "pyfakefs",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "tox",
    "types-python-dateutil",
]

[project.scripts]
yarf = "yarf.main:main"

[tool.hatch.build]
exclude = [
  "docs",
  "tests",
]

[tool.hatch.build.hooks.custom]
dependencies = [
    "pywayland",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = [
    "docs/*",
    "yarf/vendor/*",
]

[tool.ruff.lint]
extend-select = ["D100"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D100"]
"hatch_build.py" = ["D100"]
".github/**" = ["D100"]
"examples/**" = ["D100"]
# Generated Wayland protocol files
"yarf/lib/wayland/protocols/*/*" = ["D100"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs/ --ignore=examples/ --ignore=hatch_build.py"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "output_size",
    "start_suite",
    "wayland_client",
    "wayland_globals",
]

[tool.coverage.run]
omit = [
    "hatch_build.py",
    "yarf/lib/wayland/protocols/*/*",
    "yarf/vendor/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
    "continue",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.licensecheck]
ignore_packages = [
    "asyncvnc",             # Wrote GPL on setup.cfg but it actually have GPL-3.0 license
    "keysymdef",            # X11 is compatible with GPL (https://www.gnu.org/licenses/gpl-faq.en.html#GPLWrapper)
    "orderedmultidict",     # orderedmultidict is unlicensed
]
