[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-counter"
version = "0.1.0"
description = "A simple GUI counter"
authors = [{ name = "Hou Nam Chiang", email = "douglas.chiang@canonical.com" }]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
simple-counter = "simple_counter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["simple_counter"]
