[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yarf-example-plugin"
version = "0.0.1"
description = "Example plugin library for YARF."
authors = [
    { name = "Hou Nam Chiang", email = "douglas.chiang@canonical.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "robotframework~=6.1.1",
    "yarf @ git+ssh://git@github.com/canonical/yarf.git@1.3.0",
]

[tool.hatch.build]
packages = ["src/yarf_plugin_example"]

[tool.hatch.metadata]
allow-direct-references = true
